# SmartHomeRecovery

./: README.md  pyproject.toml
config/: config.py  config_module.json  config_module.yaml  config_modules.yaml  test_data.py
config/backup_config/: config_module.yaml  config_modules.yaml
src/: __main__.py  manual_request.py  utils.py
src/modbus/: modbus.py
src/models/: Client.py  Dev.py
src/qt/: __main__.py
src/qt/UI/: UI_MainWin.py  UI_MainWin.ui
src/qt/forms/: MainWin.py
tests/: test_modbus.py
